# magic-keyboard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PLANNEDFEATURES.md  README.md  install-steamdeck.sh  test-keyboard.html  uninstall-steamdeck.sh
.agent/: CANDIDATE_BAR_SELECTION.md  CLIPBOARD_SHORTCUT_AGENT.md  FOCUS_VISIBILITY_CONTROL.md  MASTER_IMPLEMENTATION_PLAN.md
.agent/workflows/: implement-clipboard-shortcut.md  implement-focus-control.md
data/dict/: freq.tsv  words.txt  words_en.txt
data/layouts/: qwerty-pointer.json  qwerty.json
data/themes/: dark-blue.json  default.json  light.json  steam-deck.json
docs/: DEPLOYMENT_AGENT.md  FAILURE_MATRIX.md  GESTURE_AGENT.md  KEYBOARD_UI_AGENT.md  SETTINGS_PERSISTENCE_AGENT.md  SWIPE_ENGINE_SPEC.md
packaging/applications/: magickeyboard-hide.desktop.in  magickeyboard-show.desktop.in  magickeyboard-toggle.desktop.in  magickeyboard.desktop.in
packaging/arch/: PKGBUILD.template
packaging/autostart/: magickeyboard-ui.desktop
packaging/plasma/: magickeyboard.desktop
packaging/scripts/: configure-input-method.sh  fcitx5-env.sh  fcitx5-launch.sh  magic-keyboard-verify  post-install.txt  smoke_test.sh  start-magic-keyboard.sh
packaging/systemd/: fcitx5.service  magickeyboard-ui.service  magickeyboard-ui.service.in
packaging/tools/: smoke_start_menu.sh
scripts/: verify-stability.sh
src/engine/: CMakeLists.txt  magickeyboard-addon.conf.in  magickeyboard.conf.in  magickeyboard.cpp  magickeyboard.h  settings.cpp  settings.h  shark2.cpp  shark2.h  swipe_engine.cpp  swipe_engine.h  swipe_engine_test.cpp  user_data.cpp  user_data.h
src/engine/lexicon/: Trie.cpp  Trie.h
src/gesture/: CMakeLists.txt  gesture_agent.h
src/ipc/: CMakeLists.txt  protocol.h
src/ui/: CMakeLists.txt  KeyboardWindow.qml  KeyboardWindowV2.qml  magickeyboardctl.cpp  main.cpp
